--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -37,7 +37,7 @@
     <a href="https://github.com/alancastilleja/FLASK-practice-project" class="card-link">Github Link</a>
   </div>
 </div>
-<div class="card ml-4 mr-4 mb-3" style="width: 18rem; top: 20px">
+<div class="card ml-4 mr-4 mb-3 h-100" style="width: 18rem; top: 20px">
   <img src="{{url_for('static', filename='insight.png')}}" class="card-img-top" alt="..." height="140" width="500">
   <div class="card-body">
     <h5 class="card-title">Insight Data Science DC project</h5>
